<resources>
    <string name="app_name">PackingApp</string>
    <string name="enter_your_name">اسم المستخدم</string>
    <string name="enter_your_password">كلمة المرور</string>
    <string name="way">الوجهة</string>
    <string name="NameArabic">الاسم بالعربي</string>
    <string name="NameEnglish">الاسم بالانجليزي</string>
    <string name="LienceNumber">رقم الرخصه</string>
    <string name="Weight">اقصي حموله</string>
    <string name="Status">الحاله</string>
    <string name="Company">الشركه</string>
    <string name="Phone">المحمول</string>
    <string name="Address">العنوان</string>
    <string name="Vechile_ID">رقم المركبه</string>
    <string name="Estimation_Time">وقت الرحله</string>
    <string name="Stations">المحطات</string>
    <string name="Driver_ID">رقم السائق</string>
    <string name="hint_resource">اختار رقم السائق</string>
    <string name="Message">رساله نصيه</string>
    <string name="enter_barcode">أدخل الباركود</string>
    <string name="enter_valid_barcode">هذا الباركود غير موجود</string>
    <string name="delete_dialoge">هل أنت متأكد من أنك تريد حذف</string>
    <string name="message_not_equalfornoofpaclkageandcountoftrackingnumbers_recieve">يوجد شحنات أخرى لم يتم إستلامها</string>
    <string name="message_not_equalfornoofpaclkageandcountoftrackingnumbers_zone">يوجد شحنات أخرى لم يتم  تسكينها في المنطقة</string>
    <string name="message_not_equalfornoofpaclkageandcountoftrackingnumbers_driver">يوجد شحنات أخرى لم يتم إضافتها لقائمة التوصيل</string>
    <string name="message_equalfornoofpaclkageandcountoftrackingnumbers">No of tracking number that entered is equal packed package</string>
    <string name="there_is_no_trackednumber_scanned">أدخل رقم التتبع أولاً</string>
    <string name="updte_zone_if_exist">"تم أدخال المنطقه مختلفه عما تم من قبل..هل تريد التعديل "</string>
    <string name="delete_last_assign">حذف الكل</string>
    <string name="enter_tracking_number">أدخل كود تتبع الشحنه</string>
    <string name="enter_valid_tracking_number">أدخل رقم تتبع صحيح </string>
    <string name="enter">أدخال</string>
    <string name="confirm_assign_orders_to_driver">تأكيد وطباعه</string>
    <string name="confirm_assign_orders_to_zone">تاكيد</string>
    <string name="National">الرقم القومي</string>
    <string name="EmployeeID">رقم الموظف</string>
    <string name="choice_driver_id">إختر مندوب التوصيل</string>
    <string name="choice_way_id">اختار رقم الوجهه</string>
    <string name="confirm_recieved_trackingnumber">تأكيد إستلام الشحنات</string>
    <string name="recieved_trackingnumber">إستلام الشحنات من المركز</string>
    <string name="show_my_orders_in_runtimesheet">عرض الشحنات المستلمة</string>
    <string name="show_my_orders_end_of_day">ملخص الأداء</string>
    <string name="checkin">دخول</string>
    <string name="checkout">خروج</string>
    <string name="order_number">رقم امر البيع</string>
    <string name="phone_number">تليفون العميل</string>
    <string name="tracking_number">رقم تتبع الشحنه</string>
    <string name="package_items">عدد اصناف الشحنه</string>
    <string name="delete_last_assigned_order_of_driver">هل تريد حذف بيانات أخر عملية؟</string>
    <string name="passcode">الكود</string>
    <string name="enter_passcode">ادخل الكود السري</string>
    <string name="enter_sms_body">أدخل نص الرسالة</string>
    <string name="add_items">أضافه</string>
    <string name="enter_reject_reason">ادخل سبب رفض الاستلام</string>
    <string name="action_settings">Add a Printer</string>
    <string name="zebra_technologies_corp">Zebra Technologies Corp.</string>
    <string name="zebra_address_line_1"><b>ISV TEAM</b>, Lincolnshire IL, 60069.</string>
    <string name="zebra_address_line_2">Visit <a href="https://developer.motorolasolutions.com/welcome">developer.zebra.com</a> for more support.</string>
    <string name="print">طباعة بوليصة الشحن</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="printer_status">Printer Status</string>
    <string name="rotation_prompt">Choose a rotation</string>
    <string name="image_selection">Select an Image</string>
    <string name="store_check">Check to store on printer</string>
    <string name="path_hint">Path to store on printer</string>
    <string name="printer_selection">Select a Printer</string>
    <string name="discovered_printers">Discovered printers</string>
    <string name="searching_for_printers">Searching for printers&#8230;</string>
    <string name="connecting_to_printer">Connecting to printer&#8230;</string>
    <string name="printer_connected">Printer connected</string>
    <string name="printer_connection_failed">Printer connection failed</string>
    <string name="connected_to_printer">Connected to printer:</string>
    <string name="connection_error">Connection error</string>
    <string name="print_successful">Print successful</string>
    <string name="print_failed">Print failed:</string>
    <string name="printer_paused">Printer paused</string>
    <string name="head_open">Head open</string>
    <string name="paper_out">Paper out</string>
    <string name="cannot_print">Cannot print</string>
    <string name="no_printers_found">No printers found</string>
    <string name="success_header_of_driver">اجمالى اوامر بيع اليوم</string>
    <string name="failed_header_of_driver">اجمالي قيمة ما تم رفضه</string>
    <string name="you_choice_mulite_or_choice_noting">لقد اخترت اكثر من اختيار أو لم تختار شى</string>
    <string name="you_choice_noting">لم تختار شى</string>
    <string name="there_is_no_data_todelete">لايوجد بيانات للحذف</string>
    <string name="special_character_found_in_string">Special character found in the string</string>
    <string name="driver">السائق</string>
    <string name="Vechile">المركبات</string>
    <string name="login">دخول الحساب</string>
    <string name="packed">تغليف الطلب</string>
    <string name="SortingTeam">إستلام الشحنات الجديدة</string>
    <string name="SortedTeam">تنظيم وتوزيع الشحنات</string>
    <string name="Driver">مندوب التوصيل</string>
    <string name="Supervisor">اداره حركه السيارات</string>
    <string name="newOrder">ادخل امر شراء جديد</string>
    <string name="edit">تعديل محتويات شحنة</string>
    <string name="edit1">تعديل محتويات الشحنة</string>
    <string name="edit_qty">تعديل</string>
    <string name="loadnewOrder">تغليف شحنة جديدة</string>
    <string name="loadlastOrder">فتح آخر عملية لهذا الطلب</string>
    <string name="serial">كود تتبع الشحنه</string>
    <string name="search">إدخال</string>
    <string name="enter_zone">تسكين</string>
    <string name="Reschedule">تحديد ميعاد آخر</string>
    <string name="Confirm_Deleivery">تأكيد الإستلام</string>
    <string name="call">اتصال</string>
    <string name="Send_SMS">إرسال</string>
    <string name="Reject">تاكيد رفض الاستلام</string>
    <string name="Confirm_Passcode">تاكيد الكود السري</string>
    <string name="choice_vehicle_id">اختار رقم المركبه</string>
    <string name="Product_Name">اسم المنتج</string>
    <string name="QTY">الكميه</string>
    <string name="Assign_item">إتمام الشحنة</string>
    <string name="title">نظام التعبئة والشحن والتوصيل</string>
    <string name="notadd">لم يتم اضافه عناصر</string>
    <string name="done">تم إضافة إلى موجود</string>
    <string name="confirm">تم</string>
    <string name="order_status">"حاله هذا الطلب هي "</string>
    <string name="noitem">لا توجد عناصر  تم تعبئتها لتعديلها</string>
    <string name="item_notselected">توجد عناصر ضمن الطلب لم يتم إضافتها لشحنة</string>
    <string name="doneforheader">Done for Header</string>
    <string name="invaliduser">برجاء التاكد من اسم المستخدم ورقم السري</string>
    <string name="not_enter">لم يتم أدخال</string>
    <string name="enterbefor">تم أدخال هذا من قبل</string>
    <string name="invalidnumber">رقم الشحنة غير صحيح</string>
    <string name="statusnotUpdate">لم يتم تعديل الحاله</string>
    <string name="tracking_number_server">رقم تتبع الشحنه غير موجود علي السيرفر</string>
    <string name="order_not_found">Order not found</string>
    <string name="required_header_of_driver">اجمالى المبلغ المطلوب</string>
    <string name="rejected_packages">الشحنات المرفوضه</string>
    <string name="txt_enter_number">أدخل رقم الطلب</string>
    <string name="total_price">اجمالى السعر</string>
    <string name="will_delete_last_order">سوف يتم حذف أخر عمليه لأمر بيع وتحميله من جديد</string>
    <string name="show_last_assign">حذف</string>
    <string name="recall_assign_orders_to_driver">إستدعاء</string>
    <string name="reprinter">إعادة طباعة بوليصة شحن</string>
    <string name="reprinter_runsheet">إعادة طباعة RunSheet</string>
    <string name="customer_phone">أسم العميل</string>
    <string name="customer_address">العنوان</string>
    <string name="confirm_reschedule">تأكيد التاجيل</string>
    <string name="enter_reschedule_time">أختر وقت التاجيل</string>
    <string name="enter_reschedule_time_lesethan11">أختر وقت أقل من 11 مساء</string>
    <string name="choice_reason">أختر السبب</string>
    <string name="missingdata">البيانات ناقصه</string>
    <string name="enter_qyt">أدخل الكميه</string>
    <string name="barcode">الباركود</string>
    <string name="GetOrderDatactivity_label">Packing</string>
    <string name="AssignItemToPackagesActivity_label"><![CDATA[Packing->Assign Items]]></string>
    <string name="EditPackagesActivity_label"><![CDATA[Packing->EditPackages]]></string>
    <string name="EditPackageItemsActivity_label"><![CDATA[Packing->Edit Packages->Edit Items]]></string>
    <string name="RecievePacked_label"><![CDATA[Sorting->Receive packages]]></string>
    <string name="RecieveForDriver_label"><![CDATA[Driver->Confirm Recieving]]></string>
    <string name="EditPackagesForRecievingActivity_label"><![CDATA[Delete packages]]></string>
    <string name="OrdersOfRuntimeSheetNowForDriverActivity_label"><![CDATA[Driver->DriverOrders]]></string>
    <string name="OrderDetails_forDriverActivity_label"><![CDATA[Driver->DriverOrders->OrderDetails]]></string>
    <string name="enter_more_thanrequired">تم أضافه الكميه المطلبه أو تحاول أضافه أكثر من المطلوب</string>
    <string name="choice_ordernumber_that_youneed_to_print">إختر الطلب الذى تريد طباعة شحناتة</string>
    <string name="choice_lastordernumber_that_youneed_to_load">اختر الامر السابق الذى تريد تحميله</string>
    <string name="add_items_topakage">إضافة العنصر للشحنة</string>
    <string name="title_dialoge_missuing_barcode">عناصر لم يتم إضافتها لشحنة</string>
    <string name="title_dialoge_missuing_trackingnumbers">لم يتم أكتمال الشحن</string>
    <string name="enter_zone_hint">أدخل المنطقة</string>
    <string name="choice_reject_reason">أختر سبب الرفض</string>
    <string name="recall_assign_orders_to_driver_hint"> أدخل رقم التسلسل</string>
    <string name="recall_assign_orders_to_driver_tilte">RunTimeSheet إستدعاء</string>
    <string name="enter_new_qty">تعديل الكمية</string>
    <string name="Send_SMS_to_custome">إرسال رسالة إلى العميل</string>
    <string name="rejected_packages_title">رفض الشحنه</string>
    <string name="Reschedule_for_order">تأجيل أمر البيع</string>
    <string name="Show_Assign_Orders_To_Zone"> 1-تسكين الشحنات فى مناطق توصيلها- </string>
    <string name="show_assign_orders_to_driver">2-تجهيز قائمة بالشحنات لمندوب التوصيل- </string>
    <string name="delete">حذف</string>
    <string name="scananddelete">ادخال و حذف</string>
    <string name="Send_passcode_to_customer">ارسال الكود السرى للعميل</string>
    <string name="this_is_weight_Item_cant_edit">هذا الصنف موزون .. لايمكن تعديله</string>
    <string name="Added">تم</string>
    <string name="choice_zone">اختر المنطقه</string>
    <string name="Resetpassword">تغيير كلمه السر</string>
    <string name="username">أسم المستخدم</string>
    <string name="enter_new_password">كلمه المرور الجديده</string>
    <string name="enter_confirm_new_password">تأكيد كلمة المرور الجديده</string>
    <string name="change">تغيير</string>
</resources>