<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AdminstratorActivity"
    android:orientation="vertical"
    android:gravity="center">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingEnd="40dp"
    android:layout_gravity="center"
    android:paddingStart="40dp">

    <Button
        android:id="@+id/btn_packed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_for_button_of_app"
        android:background="@drawable/buttonshap"
        android:textColor="@color/textcolor_btns"
        android:text="@string/packed"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_SortingTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_for_button_of_app"

        android:text="@string/SortingTeam"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttonshap"

        android:textColor="@color/textcolor_btns"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_SortedTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_for_button_of_app"

        android:background="@drawable/buttonshap"
        android:textColor="@color/textcolor_btns"
        android:text="@string/SortedTeam"
        android:visibility="gone"/>


    <Button
        android:id="@+id/btn_driver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_for_button_of_app"

        android:text="@string/Driver"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttonshap"
        android:textColor="@color/textcolor_btns"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_reprint_AWB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_for_button_of_app"
        android:text="@string/reprinter"

        android:background="@drawable/buttonshap"
        android:textColor="@color/textcolor_btns"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_reprint_runsheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_for_button_of_app"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/reprinter_runsheet"
        android:background="@drawable/buttonshap"
        android:textColor="@color/textcolor_btns"
        android:visibility="gone"/>


    <Button
        android:id="@+id/btn_supervisor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_for_button_of_app"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Supervisor"
        android:background="@drawable/buttonshap"
        android:textColor="@color/textcolor_btns"
        android:visibility="gone"/>

</LinearLayout>
</ScrollView>