<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/main_background_color">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/txt_color"
        android:text="@string/Resetpassword"
        android:gravity="center"
        android:textSize="@dimen/font_size_for_text_of_app"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:textColorHint="@color/txt_color_hint"
        >
    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColorHint="@color/txt_color_hint"
        android:textSize="@dimen/font_size_for_text_of_app"
        android:textColor="@color/txt_color"
        >


    </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:textColorHint="@color/txt_color_hint"
        >
        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:textColorHint="@color/txt_color_hint"
            android:textSize="@dimen/font_size_for_text_of_app"
            android:textColor="@color/txt_color"
            android:inputType="textPassword" >


        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:textColorHint="@color/txt_color_hint"
        >
        <EditText
            android:id="@+id/edit_newpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_password"
            android:textColorHint="@color/txt_color_hint"
            android:textSize="@dimen/font_size_for_text_of_app"
            android:textColor="@color/txt_color"
            android:inputType="textPassword">


        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:textColorHint="@color/txt_color_hint"
        >
        <EditText
            android:id="@+id/edit_confirmnewpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_confirm_new_password"
            android:textColorHint="@color/txt_color_hint"
            android:textSize="@dimen/font_size_for_text_of_app"
            android:textColor="@color/txt_color"
            android:inputType="textPassword">


        </EditText>
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:textSize="@dimen/font_size_for_button_of_app"
            android:background="@drawable/buttonshap"
            android:textColor="@color/textcolor_btns"/>


    </LinearLayout>

</LinearLayout>