<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="230dp">
    <RelativeLayout android:background="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="25dp">
        <TextView android:textSize="18sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reprinter_runsheet" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <TextView android:textSize="18sp" android:id="@+id/runTimeInfo_id" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/app_name" android:textAllCaps="false"/>
    <TextView android:textSize="18sp" android:id="@+id/runTimeInfo_status" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/app_name" android:textAllCaps="false"/>
    <TextView android:textSize="18sp" android:id="@+id/runTimeInfo_driverName" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/Added" android:textAllCaps="false"/>
    <Button android:textSize="@dimen/font_size_for_button_of_app" android:textColor="@color/textcolor_btns" android:id="@+id/runTimeInfo_printSheet" android:background="@drawable/buttonshap" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:layout_marginBottom="15dp" android:text="@string/reprinter_runsheet" android:textAllCaps="false"/>
</LinearLayout>
