<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/txt_color"
        android:text="@string/Send_SMS_to_custome"
        android:gravity="center"
        android:textSize="@dimen/font_size_for_text_of_app"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:textColorHint="@color/txt_color_hint"
        >
    <EditText
        android:id="@+id/edit_smsInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_sms_body"
        android:textSize="@dimen/font_size_for_text_of_app"
        android:textColorHint="@color/txt_color_hint"
        android:textColor="@color/txt_color">

        <requestFocus />
    </EditText>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btn_send_sms"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/Send_SMS"
            android:background="@drawable/buttonshap"
            android:textSize="@dimen/font_size_for_button_of_app"

            android:textColor="@color/textcolor_btns"/>
        <Button
            android:id="@+id/btn_dismiss"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Dismiss"
            android:visibility="gone"/>

    </LinearLayout>
</LinearLayout>